--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,7 +56,7 @@
   }
 }
 
-/*=============== BASE ===============*/
+/*=============== RESET HTML ===============*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -160,6 +160,43 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+
+.header{
+  width: 100%;
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  transition: background .3s;
+}
+
+.nav{
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ }
+
+.nav__logo,
+.nav__toggle{
+  color: var(--title-color);
+  display: flex;
+}
+
+.nav__logo{
+  align-items: center;
+  column-gap: .5rem;
+  font-weight: var(--font-bold);
+}
+.nav__logo img {
+  width: 1.25rem;
+}
+
+.nav__togle{
+  font-size: 1.25rem;
+  cursor: pointer;
+}
 
 
 /* Show menu */
