--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,6 +238,10 @@ img {
   cursor: pointer;
 }
 
+.nav .nav__button{
+  background-color: var(--title-color);
+}
+
 /* Show menu */
 .show-menu{
   right: 0;
@@ -316,7 +320,35 @@ img {
   margin: 0 auto;
 }
 /*=============== BUTTON ===============*/
+.button{
+  display: inline;
+  background-color: var(--first-color);
+  padding: 18px 32px;
+  border: 2px solid var(--first-color-light);
+  color: var(--title-color-black);
+  font-weight: var(--font-bold);
+  cursor: pointer;
+  transition: background .3s;
+}
+.button:hover{
+  background-color: var(--first-color-alt);
+}
 
+.button i{
+  font-size: 1.25rem;
+  transition: transform .3s;
+}
+
+.button__flex{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: .5rem;
+}
+
+.button__flex:hover i{
+  transform: translateX(.25rem);
+}
 
 /*=============== LOGOS ===============*/
 
