Adicionado responsividade para telas pequenas

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -255,7 +255,9 @@ img {
 }
 
 /* Active link */
-
+.active-link{
+  color: var(--first-color)
+}
 
 /*=============== HOME ===============*/
 .home{
@@ -379,10 +381,6 @@ img {
   padding: 1.5rem 2rem;
   border: 2px solid transparent;
   transition: background .5s, border .4s;
-}
-
-.program__card:not(#first-card){
-  margin-top: 2rem;
 }
 
 .program__img{
@@ -663,7 +661,7 @@ img {
 }
 
 .calculate__input[type=number]{
-  -moz-appearance: textfield;
+  --moz-appearance: textfield;
 }
 
 .calculate__label{
@@ -796,19 +794,132 @@ img {
   transform: translateY(1rem);
 }
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(79, 4%, 15%);
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: hsl(79, 4%, 25%);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(79, 4%, 35%);
+}
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+	position: fixed;
+	right: 1rem;
+  bottom: -30%;
+  background-color: var(--first-color);
+  display: inline-flex;
+  padding: .35rem;
+  color: var(--title-color-black);
+  font-size: 1.25rem;
+  z-index: var(--z-tooltip);
+  transition: .3s;
+}
 
+.scrollup:hover{
+  transform: translateY(-.25remj);
+}
 
 /* Show Scroll Up*/
-
+.show-scroll{
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 340px){
+  .container{
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  
+  .section__titles{
+    flex-direction: column;
+    row-gap: .25rem;
+  }
 
+  .home__triangle,
+  .choose__triangle{
+    height: 255px;
+  }
+
+  .home__triangle-3,
+  .choose__triangle-1{
+    height: 255px;
+  }
+
+  .choose__img{
+    width: 195px;
+  }
+
+  .pricing__container {
+    grid-template-columns: 250px;
+  }
+
+  .pricing__card{
+    padding: 1.5rem;
+  }
+
+  .footer__conatent{
+    grid-template-columns: 1fr;
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 768px){
+  .nav__menu{
+    width: 50%;
+  }
 
+  .home__container,
+  .choose__container{
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+  
+  .home__data,
+  .choose__content, .section__data,
+  .choose__description, .calculate__description{
+    text-align: initial;
+  }
+
+  .logos__container{
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .program__container{
+    grid-template-columns: repeat(2, 255px);
+    gap: 2.5rem;
+  }
+
+  .choose__content{
+    order: 1;
+  }
+
+  .choose__data{
+    justify-items: flex-start;
+  }
+
+  .choose__content, .section__titles, .calculate__content{
+    justify-content: initial;
+  }
+
+  .pricing__container{
+    grid-template-columns: repeat(2, 285px);
+    gap: 2.5rem
+  }
+
+  .calculate__container{
+    grid-template-columns: 1fr .8fr;
+    align-items: center;
+  }
+}
 
 /* For large devices */
