--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,11 +7,11 @@
   
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
-  --first-color: hsl(79, 72%, 55%);
-  --first-color-light: hsl(79, 97%, 77%);
-  --first-color-alt: hsl(79, 67%, 52%);
-  --first-color-dark: hsl(79, 63%, 50%);
-  --first-color-gray: hsl(79, 6%, 64%);
+  --first-color: hsl(24, 72%, 55%);
+  --first-color-light: hsl(24, 97%, 77%);
+  --first-color-alt: hsl(24, 67%, 52%);
+  --first-color-dark: #d06f2f;
+  --first-color-gray: hsl(24, 6%, 64%);
   --title-color: hsl(180, 4%, 98%);
   --title-color-black: hsl(180, 4%, 12%);
   --text-color: hsl(180, 4%, 72%);
@@ -190,7 +190,7 @@ img {
   font-weight: var(--font-bold);
 }
 .nav__logo img {
-  width: 1.25rem;
+  width: 2.5rem;
 }
 
 .nav__togle{
@@ -751,7 +751,7 @@ img {
   row-gap: .75rem;
 }
 
-.footer__link{
+.footer__links{
   color: var(--text-color);
   transition: color .3s;
 }
@@ -887,7 +887,7 @@ img {
   .home__data,
   .choose__content, .section__data,
   .choose__description, .calculate__description{
-    text-align: initial;
+    text-align: center;
   }
 
   .logos__container{
@@ -908,7 +908,7 @@ img {
   }
 
   .choose__content, .section__titles, .calculate__content{
-    justify-content: initial;
+    justify-content: center;
   }
 
   .pricing__container{
@@ -920,6 +920,138 @@ img {
     grid-template-columns: 1fr .8fr;
     align-items: center;
   }
+
+  .calculate__form{
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1.5rem;
+  }
+
+  .calculate__form .button{
+    grid-column: 1/3;
+  }
+
+  .footer__container{
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+  }
+
+  .footer__content{
+    grid-template-columns: repeat(3, max-content);
+  }
 }
 
 /* For large devices */
+@media screen and (min-width: 1023px){
+  .nav{
+    height: calc(var(--header-height) + 2rem);
+  }
+
+  .nav__menu{
+    width: initial;
+  }
+
+  .nav__toggle,
+  .nav__close{
+    display: none;
+  }
+
+  .nav__list{
+    flex-direction: row;
+    padding: 0;
+    align-items: center;
+    column-gap: 4rem;
+  }
+
+  .section {
+    padding: 7rem 0 0;
+  }
+
+  .home__container{
+    grid-template-columns: repeat(2, max-content);
+    align-items: initial;
+  }
+
+  .home__title{
+    margin: .75rem 0 1.25rem;
+  }
+
+  .home__description{
+    width: 445px;
+    margin-bottom: 3rem;
+  }
+
+  .home__img{
+    width: 550px;
+    transform: translateX(-6rem);
+  }
+
+  .home__triangle{
+    height: 700px;
+  }
+
+  .home__triangle-1{
+    width: 545px;
+  }
+
+  .home__triangle-2{
+    width: 345px;
+  }
+
+  .home__triangle-3{
+    width: 145px;
+  }
+
+  .logos{
+    padding: 3.4rem 0 1rem;
+  }
+
+  .logos__img{
+    width: 190px;
+  }
+
+  .choose__overflow{
+    overflow: hidden;
+  }
+
+  .choose__img{
+    width: 350px;
+  }
+
+  .choose__triangle{
+    height: 700px;
+  }
+
+  .choose__triangle-1{
+    width: 545px;
+  }
+
+  .choose__triangle-2{
+    width: 345px;
+  }
+
+  .choose__triangle-3{
+    width: 145px;
+  }
+
+  .footer{
+    padding-bottom: 3rem;
+  }
+
+  .footer__form{
+    flex-direction: row;
+  }
+
+  .footer__content{
+    column-gap: 5rem;
+  }
+
+  .footer__group{
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    margin-top: 7rem;
+  }
+
+  .footer__social{
+    order: 1;
+  }
+}
